--- a/app/src/main/cpp/info/CMakeLists.txt
+++ b/app/src/main/cpp/info/CMakeLists.txt
@@ -3,7 +3,9 @@ cmake_minimum_required(VERSION 3.4.1)
 add_library(
     ffmpeg-info
     SHARED
-    ffmpeg_info.cpp)
+    ffmpeg_info.cpp
+    ffmpeg_tool.cpp
+    )
 
 
 
