--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".FFmpegDecodeActivity"/>
         <activity android:name=".FFmpegCoreActivity"/>
         <activity android:name=".FFmpegRtmpActivity"/>
+        <activity android:name=".FFmpegToolsActivity"/>
     </application>
 
 </manifest>
